[FIX] mobile: buttons with long text could overflow containers

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3549,6 +3549,10 @@ body.fullscreen.tiki.navbar-padding {
     left: 0px;
     bottom: 0px; } }
 
+@media (max-width: 767.98px) {
+  .btn {
+    white-space: normal !important; } }
+
 div.tablesorter-resizable-container {
   clear: both;
   width: 100%; }
