--- a/themes/base_files/scss/_tiki-bootstrap_overrides.scss
+++ b/themes/base_files/scss/_tiki-bootstrap_overrides.scss
@@ -437,3 +437,7 @@ body.fullscreen.tiki.navbar-padding {
 		bottom: 0px;
 	}
 }
+
+@media (max-width: breakpoint-max(sm)) {
+	.btn { white-space: normal !important; }
+}
